# zy_cube

./: README.md  pyproject.toml
app/: main.py
app/api/: auth.py  files.py  module_metadata.py  modules.py  sql_executor.py  user_manager.py
app/core/: auth.py  config.py  dependencies.py  file_service.py  loader.py  logger.py
app/web/: dashboard.html  login.html  modules_mgr.html
app/web/static/: style.css
doc/: agent_prompt.md  api_reference.md  framework_intro.md  module_development_guide.md
examples/conf/: config.yaml  modules_manifest.json  users.json
examples/mod/demo_module/: README.md  api.py
examples/web/: test.html
